--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
              <div class="contentproje">
                <h3>Metaverso</h3>
                <p>Neste Site veja como Adicionar e conquistar coisas para facilitar seu dia a dia.</p>
-               <a href="https://ftd.com.br/" class="bntproj">Clique aqui e saiba mais</a>
+               <a href="https://www.google.com.br/" class="bntproj">Clique aqui e saiba mais</a>
              </div>
             </div>
         </div>
@@ -25,7 +25,7 @@
              <div class="contentproje">
                <h3>Metaverso</h3>
                <p> Não deixe de conhecer estes produtos que te darão maior conforto!</p>
-               <a href="https://ftd.com.br/" class="bntproj">Saiba mais</a>
+               <a href="https://www.google.com.br/" class="bntproj">Saiba mais</a>
              </div>
             </div>
         </div>
@@ -35,7 +35,7 @@
              <div class="contentproje">
                <h3>Metaverso</h3>
                <p>Quer aumentar sua renda clique no link abaixo e saiba onde conseguir o melhor da internet!</p>
-               <a href="https://www.escolasconectadas.org.br/cursos" class="bntproj">Saiba mais</a>
+               <a href="https://www.google.com.br/" class="bntproj">Saiba mais</a>
              </div>
             </div>
         </div>
