--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Novidades e Facilidades</title>
+    <title>Metaverso</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,8 +14,9 @@
             <div class="slide">
              <div class="contentproje">
                <h3>Metaverso</h3>
-               <p>Neste Site veja como Adicionar e conquistar coisas para facilitar seu dia a dia.</p>
-               <a href="https://www.google.com.br/" class="bntproj">Clique aqui e saiba mais</a>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde similique ipsam quibusdam inventore earum, quo assumenda, quam molestiae 
+                   laborum praesentium velit accusantium iure excepturi. Iste dolores id odit veritatis ex?</p>
+               <a href="https://google.com.br/" class="bntproj">Saiba mais</a>
              </div>
             </div>
         </div>
@@ -24,8 +25,10 @@
             <div class="slide">
              <div class="contentproje">
                <h3>Metaverso</h3>
-               <p> Não deixe de conhecer estes produtos que te darão maior conforto!</p>
-               <a href="https://www.google.com.br/" class="bntproj">Saiba mais</a>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit aliquid assumenda eaque, inventore 
+                   pariatur molestias hic, aspernatur nihil ipsam eius magni incidunt? Incidunt eveniet non magnam 
+                   reprehenderit beatae doloribus soluta.</p>
+               <a href="https://ftd.com.br/" class="bntproj">Saiba mais</a>
              </div>
             </div>
         </div>
@@ -34,8 +37,10 @@
             <div class="slide">
              <div class="contentproje">
                <h3>Metaverso</h3>
-               <p>Quer aumentar sua renda clique no link abaixo e saiba onde conseguir o melhor da internet!</p>
-               <a href="https://www.google.com.br/" class="bntproj">Saiba mais</a>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi eos, qui obcaecati nulla 
+                aliquid non iure autem, esse aliquam itaque rerum nostrum 
+                repudiandae! At eligendi quas provident omnis voluptatem. Dignissimos..</p>
+               <a href="https://www.escolasconectadas.org.br/cursos" class="bntproj">Saiba mais</a>
              </div>
             </div>
         </div>
